<resources>
    <string name="app_name">Minhas despesas</string>
    <string name="item_home">home</string>
    <string name="item_config">Configurações</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment_title_spent">Quanto já gastei?</string>
    <string name="text_value_money">R$ %.2f</string>
    <string name="home_fragment_count_spent">Quatidade de itens: %d</string>
    <string name="dialog_options_expense_text_title">Selecione uma opção</string>
    <string name="dialog_option_expense_text_edit">Editar item</string>
    <string name="dialog_option_expense_text_delete">Delete item</string>
    <string name="button_default_save">Salvar</string>
    <string name="button_default_cancelar">Cancelar</string>
    <string name="add_edit_activity_title_page">Adicionar item</string>
    <string name="category_activity_title_page">Selecionar categoria</string>
    <string name="statistics_activity_title_page">Estatísticas</string>
    <string name="errors_generic">Ops, algo deu errado!</string>
    <string name="buttons_default_ok">ok</string>
    <string name="setting_fragment_options_clear_expenses">Excluir todas as despesas</string>
    <string name="buttons_default_cancel">Cancelar</string>
    <string name="setting_fragment_option_setup_limit">Configurar limite mensal de gastos</string>
    <string name="setting_fragment_options_see_statics">Ver estatísticas</string>
    <string name="buttons_default_save">Salvar</string>
    <string name="dialog_add_category_text_label">Digite o nome da categoria:</string>
    <string name="dialog_options_category_text_option_delete">Deletar categoria</string>
    <string name="item_details_text_count_launchs">%d Lançamentos</string>
    <string name="text_default_value_br">R$ %.2f</string>
    <string name="text_default_value_percentage">%.3f%%</string>


<!--    Array color names -->
    <string-array name="colorNames">
        <item>green</item>
        <item>dark_red</item>
        <item>medium_blue</item>
        <item>light_green</item>
        <item>saddle_brown</item>
        <item>dark_magenta</item>
        <item>dark_blue</item>
        <item>blue_violet</item>
        <item>olive</item>
        <item>purple</item>
        <item>maroon</item>
        <item>dark_green</item>
        <item>aquamarine</item>
        <item>chartreuse</item>
        <item>olive_drab</item>
        <item>indigo</item>
        <item>medium_turquoise</item>
        <item>dark_slate_blue</item>
        <item>royal_blue</item>
        <item>medium_sea_green</item>
        <item>lime_green</item>
        <item>dark_slate_gray</item>
        <item>forest_green</item>
        <item>midnight_blue</item>
    </string-array>
</resources>