<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@drawable/bg_accent_radius_9dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_title"
        style="@style/text_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/dialog_options_expense_text_title"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toStartOf="@+id/image_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_close"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorTextLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_option_edit"
        style="@style/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:layout_marginTop="16dp"
        android:drawableEnd="@drawable/ic_edit"
        app:drawableTint="@color/colorTextLight"
        android:text="@string/dialog_option_expense_text_edit"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:layout_editor_absoluteX="16dp" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorTextLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_option_edit" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_option_delete"
        style="@style/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:layout_marginTop="16dp"
        android:drawableEnd="@drawable/ic_delete"
        app:drawableTint="@color/colorTextLight"
        android:text="@string/dialog_option_expense_text_delete"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        tools:layout_editor_absoluteX="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>