<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBlack"
    android:padding="8dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/image_button_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:adjustViewBounds="true"
            android:background="@drawable/bg_circle"
            android:src="@drawable/ic_tag" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_category_name"
                style="@style/text_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lanches" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_launchs_count"
                style="@style/text_thin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_details_text_count_launchs" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_value"
                style="@style/text_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_default_value_br"
                android:textAlignment="textEnd" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_percentage"
                style="@style/text_thin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_default_value_percentage"
                android:textAlignment="textEnd" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>