<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/colorWhite"
    tools:context=".ui.navigation.settings.SettingsFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_option_clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/text_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_clear_all"
            android:drawablePadding="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="32dp"
            android:paddingBottom="32dp"
            android:text="@string/setting_fragment_options_clear_expenses"
            android:textAlignment="textStart" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorTextLight" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_option_limit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_option_clear">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/text_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_money_off"
            android:drawablePadding="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="32dp"
            android:paddingBottom="32dp"
            android:text="@string/setting_fragment_option_setup_limit"
            android:textAlignment="textStart" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorTextLight" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_option_statistics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_option_limit">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/text_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_bar_chart"
            android:drawablePadding="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="32dp"
            android:paddingBottom="32dp"
            android:text="@string/setting_fragment_options_see_statics"
            android:textAlignment="textStart" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorTextLight" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>